# school-tool

./: .gitignore  Build MSIX.bat  CHANGELOG.md  CLAUDE.md  CONTEXT-SUMMARY.md  LICENSE  ORCHESTRATION-PLAN.md  ORCHESTRATION-STATUS.md  PROJECT-INVENTORY.md  README.md  Run School Tool.bat  TESTING.md  app.py  app_metadata.py  pyproject.toml  requirements-dev.txt  requirements.txt  rewrite-history.sh
.github/workflows/: backend.yml  build.yml
_agent-prompts/: README.md  code-reviewer-agent.md  discovery-agent.md  fixer-agent.md  implementer-agent.md  refactor-agent.md  tester-agent.md
_archive/: README.md
assets/brand/: render_app_tiles.py  render_msix_tiles.py
backend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.test.toml  wrangler.toml
backend/migrations/: 0001_init.sql
backend/src/: index.ts
backend/tests/: auth.test.ts  db.test.ts  invoices.test.ts  licences.test.ts  mailer.test.ts  me.test.ts  pos.test.ts  schools.test.ts
design_system/design_handoff_school_finance_toolkit/: EXTENDING.md  README.md  colors_and_type.css
docs/: 01_REQUIREMENTS.md  02_ARCHITECTURE.md  03_ROADMAP.md  04_BACKEND_DESIGN.md  05_DOMAIN_SETUP.md  06_PRICING.md  ADR-0015-tool-result-side-rail-and-table.md  Tools_in_Development.md  store_listing_copy.md  store_privacy_policy.md  store_publish.md
handoff/: phase1_m3_finishing.md  phase2_m2_completion.md  phase3_m7_build.md  phase3_paused_m4_research.md  round10_threshold_slider_export_split.md  round11_slider_commentary_resize.md  round14_final_resize_squeeze.md  round21_phase_a.md  round22b_view_tabs_log_collapse_subsidy.md  round23_polish_filter_fix_combined_colors.md  round29_hide_clear_on_pal.md  round30_store_update_check.md  round33_pre_hotfix_audit.md  round34_email_and_privacy.md  round35_no_paid_inapp_changelog.md  round37_friendly_missing_input.md  round40_fixed_width_text_boxes.md  round44_subprogram_redesign_brief.md  round45_phaseA_variance_pacing.md  round46_phaseB_watchlist_contribution.md  round49_summary_tab_drag_perf.md  round51_phaseD_structured_commentary.md  round52_output_redesign_brief.md  round53_F1_status_pill_prose_cap.md  round54_F2_trend_watchlist.md  round55_ui_simplification.md  round56_pacing_removal.md  round7_register_500_diagnosis.md  round8_phase1_build_map.md  round8_phase3_HI_complete.md  round8_phase3_J_xlsx_export.md  round8_subprogram_design_gap.md  round9_live_test_fixes.md
handoff/archive/: README.md  phase1_drift_map.md  phase3_final_report.md  round13_label_value_resize_root_cause.md  round19_draggable_rail_pal_button.md  round20_plain_english_errors.md  round22a_inline_commentary.md  round22c_output_pill.md  round22d_rail_data_bars.md  round22e_sliders_side_by_side_tab_filter.md  (+15 more)
msix/: AppxManifest.template.xml  README.md  build_msix_package.ps1  test-cert.pfx
packaging/: README.md  SchoolTool.spec
scripts/: bump_version.py  generate_licence_keypair.py  generate_store_icons.py  port_tokens.py
tests/: test_account.py  test_api_client.py  test_base_tool.py  test_commentary_dialog.py  test_files.py  test_generate_licence_keypair.py  test_licence.py  test_licence_gate.py  test_primitives.py  test_registry.py  test_shell_clear.py  test_shell_smoke.py  test_tokens_drift.py  test_updates.py  test_user_errors.py  test_user_frame.py
toolkit/: __init__.py  account.py  api_client.py  base_tool.py  crypto_win.py  files.py  fills.py  fonts.py  licence.py  logging_setup.py  primitives.py  registry.py  shell.py  tokens.py  updates.py  user_errors.py  user_frame.py
(+62 files in other folders)
