[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "school-tool"
dynamic = ["version"]
description = "Windows desktop finance automation tools for Victorian Government school business managers."
requires-python = ">=3.12"
authors = [{ name = "Vurctne", email = "Vurctne@gmail.com" }]
dependencies = [
    "openpyxl>=3.1.2",
    "pywin32>=306; platform_system == 'Windows'",
    "pdfplumber>=0.11",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "cryptography>=42",
    # Round 30 — Microsoft Store update check on app startup. The
    # winrt-runtime + Windows.Services.Store namespace expose the
    # WinRT StoreContext API we need to ask the OS whether any package
    # updates are pending. Windows-only; toolkit/updates.py guards the
    # import and falls through to None silently when missing.
    "winrt-runtime>=2.0; platform_system == 'Windows'",
    "winrt-Windows.Services.Store>=2.0; platform_system == 'Windows'",
    "winrt-Windows.Foundation>=2.0; platform_system == 'Windows'",
    "winrt-Windows.Foundation.Collections>=2.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "pyinstaller>=6.6",
]

[tool.setuptools.dynamic]
version = { attr = "app_metadata.APP_VERSION" }

[tool.setuptools.packages.find]
where = ["."]
include = ["toolkit*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["assets/", "design_system/", "Samples/", "packaging/*.spec", "backend/", ".venv/", "venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "UP017",  # datetime.UTC alias requires Python 3.11+; keep timezone.utc for portability
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["assets/brand/", "build/", "dist/", "msix/staging/", "backend/", ".venv/", "venv/"]

[tool.pytest.ini_options]
testpaths = ["tests", "tools"]
addopts = "--strict-markers -ra"
